force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/agf__ADM_Time_Off_Log__c.object-meta.xml
<CustomObject>
    <label>Out Of Office Log</label>
    <nameField>
        <displayFormat>PTO-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out Of Office Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>