force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/fields/agf__Allocation__c.field-meta.xml
<CustomField>
    <fullName>agf__Allocation__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Percentage of time allocated to the PTOn project between the PTOn Start date and End date.</inlineHelpText>
    <label>Allocation %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>