force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/fields/agf__Approved__c.field-meta.xml
<CustomField>
    <fullName>agf__Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox gets checked once a PTon request has been approved by the requestee&apos;s manager.</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>