force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/fields/agf__Days__c.field-meta.xml
<CustomField>
    <fullName>agf__Days__c</fullName>
    <description>Number of actual days planned for PTOn project.</description>
    <inlineHelpText>Enter the number of actual days you plan to spend on your PTOn.</inlineHelpText>
    <label>Days</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>