force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/fields/agf__Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Description__c</fullName>
    <inlineHelpText>Describe your PTOn project or Out of Office in this field.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>