force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/fields/agf__End_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>