force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/recordTypes/agf__CompanyHoliday.recordType-meta.xml
<RecordType>
    <fullName>agf__CompanyHoliday</fullName>
    <active>true</active>
    <description>Use to add company holidays into the system</description>
    <label>Company Holiday</label>
</RecordType>