force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/recordTypes/agf__OutofOffice.recordType-meta.xml
<RecordType>
    <fullName>agf__OutofOffice</fullName>
    <active>true</active>
    <description>Time out of the office away from the Scrum Team.</description>
    <label>Out of Office</label>
</RecordType>