force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/recordTypes/agf__PTOn.recordType-meta.xml
<RecordType>
    <fullName>agf__PTOn</fullName>
    <active>true</active>
    <description>PTOn (Paid Time ON) time spent working on a project external to the Scrum Team.</description>
    <label>PTOn (Paid Time On)</label>
</RecordType>