force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/validationRules/agf__Start_Date_before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Start_Date_before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>agf__Start_Date__c &gt; agf__End_Date__c</errorConditionFormula>
    <errorDisplayField>agf__Start_Date__c</errorDisplayField>
    <errorMessage>The start date should always be before or same day as the End date</errorMessage>
</ValidationRule>