force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/listViews/agf__All_Out_of_Office.listView-meta.xml
<ListView>
    <fullName>agf__All_Out_of_Office</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>agf__Allocation__c</columns>
    <columns>agf__Days__c</columns>
    <columns>agf__Start_Date__c</columns>
    <columns>agf__End_Date__c</columns>
    <columns>agf__User__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Out of Office</label>
</ListView>