force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/listViews/agf__CompanyHolidays.listView-meta.xml
<ListView>
    <fullName>agf__CompanyHolidays</fullName>
    <columns>NAME</columns>
    <columns>agf__Start_Date__c</columns>
    <columns>agf__End_Date__c</columns>
    <columns>agf__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>agf__ADM_Time_Off_Log__c.agf__CompanyHoliday</value>
    </filters>
    <label>Company Holidays</label>
</ListView>