force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Time_Off_Log__c/listViews/agf__PTOn.listView-meta.xml
<ListView>
    <fullName>agf__PTOn</fullName>
    <columns>NAME</columns>
    <columns>agf__User__c</columns>
    <columns>agf__Description__c</columns>
    <columns>agf__Start_Date__c</columns>
    <columns>agf__End_Date__c</columns>
    <columns>agf__Allocation__c</columns>
    <columns>agf__Days__c</columns>
    <columns>agf__Approved__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>agf__ADM_Time_Off_Log__c.agf__PTOn</value>
    </filters>
    <label>PTOn</label>
</ListView>